--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     <h3>Compilation Model</h3>
                     <p>Understand the complete journey from source code to executable: preprocessing, compiling, assembling, and linking.</p>
                     <div class="subtopics"><strong>Scope:</strong> GCC Stages, Object Files, Linking</div>
-                    <a href="index.html" class="card-link">Access Module</a>
+                    <a href="history.html" class="card-link">Access Module</a>
                 </div>
 
                 <div class="topic-card scroll-reveal" data-hover>
@@ -703,4 +703,5 @@
         document.querySelectorAll('.stat-num').forEach(el => statsObserver.observe(el));
     </script>
 </body>
+
 </html>
